// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kube-object-menu given kube object, renders 1`] = `
<body>
  <div>
    <ul
      class="Animate opacity Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
    >
      <div>
        Some menu item
      </div>
    </ul>
  </div>
</body>
`;

exports[`kube-object-menu given no kube object, renders 1`] = `
<body>
  <div>
    <ul
      class="Animate opacity Menu MenuActions flex KubeObjectMenu toolbar gaps right bottom"
    />
  </div>
</body>
`;
